Skończona lista 1,2,3,4, i lista 5 dodana

--- a/GeoQuizL1/GeoQuizL1/app/build.gradle
+++ b/GeoQuizL1/GeoQuizL1/app/build.gradle
@@ -8,6 +8,7 @@ android {
         minSdkVersion 19
         targetSdkVersion 25
         versionCode 1
+        multiDexEnabled true
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -27,4 +28,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.1.0'
     testCompile 'junit:junit:4.12'
     compile 'com.google.android.gms:play-services-appindexing:8.4.0'
+    compile 'com.android.support:recyclerview-v7:25.1.0'
 }
